server create/detail

--- a/web/mtserver/list.html
+++ b/web/mtserver/list.html
@@ -8,7 +8,7 @@
         {{range $s := .Servers}}
         <tr>
             <td>
-                <a href="{{BaseURL}}/mserver/{{$s.ID}}">
+                <a href="{{BaseURL}}/mtserver/{{$s.ID}}">
                     {{$s.Name}}
                 </a>
             </td>
