--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,8 @@
 {{define "title"}}Start{{end}}
 {{define "content"}}
 <div class="text-center">
-    <h4>{{T "Start"}}</h4>
+    <h4>Minetest hosting</h4>
     <hr/>
+    <img src="assets/minetest-hosting-600px.png" class="img img-rounded"/>
 </div>
 {{end}}
