various ux/backend fixes

--- a/web/node_type_edit.html
+++ b/web/node_type_edit.html
@@ -51,15 +51,15 @@
             </td>
         </tr>
         <tr>
-            <td>Monthly cost [&euro;]</td>
+            <td>Daily cost [&euro;]</td>
             <td>
-                <input type="text" class="form-control" name="monthly_cost" value="{{.NodeType.MonthlyCost}}"/>
+                <input type="text" class="form-control" name="daily_cost" value="{{.NodeType.DailyCost}}"/>
             </td>
         </tr>
         <tr>
-            <td>Max months</td>
+            <td>Max days</td>
             <td>
-                <input type="number" class="form-control" name="max_months" value="{{.NodeType.MaxMonths}}"/>
+                <input type="number" class="form-control" name="max_days" value="{{.NodeType.MaxDays}}"/>
             </td>
         </tr>
         <tr>
