--- a/web/usernode/select_new.html
+++ b/web/usernode/select_new.html
@@ -5,7 +5,7 @@
         <div class="card-body">
             <h5 class="card-title">{{$nt.Name}}</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">
-                Cost: {{$nt.MonthlyCost}} &euro; per month
+                Cost: {{$nt.DailyCost}} &euro; per day / {{$nt.MonthlyCost}} &euro; per 30 days
             </h6>
             {{range $dp := $nt.DescriptionParagraphs}}
                 <p class="card-text">{{$dp}}</p>
@@ -14,8 +14,8 @@
                 {{CSRFField}}
                 <input type="hidden" name="node_type_id" value="{{$nt.ID}}"/>
                 <div class="input-group">
-                    <span class="input-group-text">Select months to order:</span>
-                    <input type="number" class="form-control" min="1" max="{{$nt.MaxMonths}}" name="months" value="1"/>
+                    <span class="input-group-text">Select amount of days to order:</span>
+                    <input type="number" class="form-control" min="1" max="{{$nt.MaxDays}}" name="days" value="30"/>
                     <button type="submit" class="btn btn-primary btn-xs">
                         Order
                     </button>
