--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -1,4 +1,4 @@
-{{define "title"}}Node details{{end}}
+{{define "title"}}Node details ({{.UserNode.Name}}){{end}}
 {{define "content"}}
 <h4>Status</h4>
 <div class="row">
