--- a/web/mtserver/detail.html
+++ b/web/mtserver/detail.html
@@ -1,9 +1,34 @@
-{{define "title"}}Minetest server{{end}}
+{{define "title"}}Minetest server ({{.Server.Name}}){{end}}
 {{define "content"}}
+<h4>Status</h4>
 <table class="table">
+    <tr>
+        <td>ID</td>
+        <td>{{.Server.ID}}</td>
+    </tr>
     <tr>
         <td>Name</td>
         <td>{{.Server.Name}}</td>
+    </tr>
+    <tr>
+        <td>DNSName</td>
+        <td>{{.Server.DNSName}}</td>
+    </tr>
+    <tr>
+        <td>Port</td>
+        <td>{{.Server.Port}}</td>
+    </tr>
+    <tr>
+        <td>UIVersion</td>
+        <td>{{.Server.UIVersion}}</td>
+    </tr>
+    <tr>
+        <td>Created</td>
+        <td>{{formattime .Server.Created}}</td>
+    </tr>
+    <tr>
+        <td>State</td>
+        <td>{{.Server.State}}</td>
     </tr>
 </table>
 {{end}}
