--- a/web/node_type_edit.html
+++ b/web/node_type_edit.html
@@ -39,6 +39,12 @@
             </td>
         </tr>
         <tr>
+            <td>Location</td>
+            <td>
+                <input type="text" class="form-control" name="location" value="{{.NodeType.Location}}"/>
+            </td>
+        </tr>
+        <tr>
             <td>Name</td>
             <td>
                 <input type="text" class="form-control" name="name" value="{{.NodeType.Name}}"/>
