add more breadcrumbs

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,7 @@
 {{define "title"}}Start{{end}}
+{{define "top-content"}}
+    {{block "breadcrumb" .Breadcrumb}}{{end}}
+{{end}}
 {{define "content"}}
 <div class="text-center">
     <h4>Minetest hosting</h4>
