--- a/web/mtserver/create.html
+++ b/web/mtserver/create.html
@@ -1,4 +1,7 @@
 {{define "title"}}Create Minetest server{{end}}
+{{define "top-content"}}
+    {{block "breadcrumb" .Breadcrumb}}{{end}}
+{{end}}
 {{define "content"}}
 <form method="POST">
     <table class="table">
