--- a/web/mtserver/list.html
+++ b/web/mtserver/list.html
@@ -1,4 +1,7 @@
 {{define "title"}}Minetest servers{{end}}
+{{define "top-content"}}
+    {{block "breadcrumb" .Breadcrumb}}{{end}}
+{{end}}
 {{define "content"}}
 <table class="table">
     <thead>
