--- a/web/node_types.html
+++ b/web/node_types.html
@@ -1,4 +1,7 @@
 {{define "title"}}Node-Types{{end}}
+{{define "top-content"}}
+    {{block "breadcrumb" .Breadcrumb}}{{end}}
+{{end}}
 {{define "content"}}
 <table class="table">
     <thead>
