--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -46,6 +46,7 @@
         <tr>
             <td>Actions</td>
             <td>
+                {{if .CanDelete}}
                 <form method="post">
                     {{CSRFField}}
                     <div class="btn-group">
@@ -55,6 +56,7 @@
                         </a>
                     </div>
                 </form>
+                {{end}}
             </td>
         </tr>
         <tr>
