--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,5 @@
 {{define "title"}}Start{{end}}
+{{define "title-icon"}}<i class="fa fa-home"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
