--- a/web/node_type_edit.html
+++ b/web/node_type_edit.html
@@ -1,4 +1,5 @@
 {{define "title"}}Edit Node-Type{{end}}
+{{define "title-icon"}}<i class="fa fa-server"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
