--- a/web/node_types.html
+++ b/web/node_types.html
@@ -1,4 +1,5 @@
 {{define "title"}}Node-Types{{end}}
+{{define "title-icon"}}<i class="fa fa-server"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
