--- a/web/profile.html
+++ b/web/profile.html
@@ -1,4 +1,9 @@
 {{define "title"}}Profile{{end}}
+{{define "title-icon"}}<i class="fa fa-user"></i>{{end}}
+
+{{define "top-content"}}
+    {{block "breadcrumb" .Breadcrumb}}{{end}}
+{{end}}
 {{define "content"}}
 <table class="table">
     <tr>
