--- a/web/usernode/delete.html
+++ b/web/usernode/delete.html
@@ -1,4 +1,5 @@
 {{define "title"}}Confirm node deletion{{end}}
+{{define "title-icon"}}<i class="fa fa-times"></i>{{end}}
 {{define "content"}}
 <form method="POST">
     <table class="table">
