--- a/web/login.html
+++ b/web/login.html
@@ -1,4 +1,5 @@
 {{define "title"}}Login{{end}}
+{{define "title-icon"}}<i class="fa fa-sign-in"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
