--- a/web/mtserver/create.html
+++ b/web/mtserver/create.html
@@ -1,4 +1,5 @@
 {{define "title"}}Create Minetest server{{end}}
+{{define "title-icon"}}<i class="fa fa-plus"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
