--- a/web/mtserver/list.html
+++ b/web/mtserver/list.html
@@ -1,4 +1,5 @@
 {{define "title"}}Minetest servers{{end}}
+{{define "title-icon"}}<i class="fa fa-list"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
