--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -1,4 +1,5 @@
 {{define "title"}}Node details ({{.UserNode.Name}}){{end}}
+{{define "title-icon"}}<i class="fa fa-server"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
@@ -116,6 +117,7 @@
         <tr>
             <td>
                 <a href="{{BaseURL}}/mtserver/{{$s.ID}}">
+                    <i class="fa fa-list"></i>
                     {{$s.Name}}
                 </a>
             </td>
@@ -144,6 +146,7 @@
 <h4>Payments</h4>
 <table class="table">
     <thead>
+        <th>ID</th>
         <th>Start</th>
         <th>End</th>
         <th>State</th>
@@ -151,6 +154,12 @@
     <tbody>
         {{range $tx := .Transactions}}
         <tr>
+            <td>
+                <a href="{{BaseURL}}/nodes/payment/{{$tx.ID}}">
+                    <i class="fa fa-money-bill"></i>
+                    {{$tx.ID}}
+                </a>
+            </td>
             <td>{{formattime $tx.StartDate}}</td>
             <td>{{formattime $tx.UntilDate}}</td>
             <td>{{block "transaction_state" $tx}}{{end}}</td>
