--- a/web/usernode/list.html
+++ b/web/usernode/list.html
@@ -1,4 +1,5 @@
 {{define "title"}}Nodes{{end}}
+{{define "title-icon"}}<i class="fa fa-server"></i>{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
@@ -17,6 +18,7 @@
         <tr class="{{if $n.UserNode.ExpirationWarning}}table-warning{{end}}">
             <td>
                 <a href="{{BaseURL}}/nodes/{{$n.UserNode.ID}}">
+                    <i class="fa fa-server"></i>
                     {{$n.UserNode.Alias}} ({{$n.UserNode.Name}})
                 </a>
             </td>
