--- a/web/error.html
+++ b/web/error.html
@@ -2,15 +2,28 @@
 <!DOCTYPE html>
 <html style="height: 100%">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="theme-color" content="#000">
+        {{block "header_common" .}}{{end}}
         <title>Error: {{.Code}}</title>
     </head>
     <body>
-        <h3>Error: {{.Code}}</h3>
-        <div>
-            An error occured: <b>{{.Error}}</b>
+        <div class="container-fluid">
+            <br>
+            {{block "top-content" .}}{{end}}
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <div class="card bg-danger">
+                        <div class="card-header">
+                            Error <b>{{.Code}}</b>
+                        </div>
+                        <div class="card-body">
+                            <div>
+                                An error occured: <b>{{.Error}}</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
