--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -125,7 +125,7 @@
                 {{formattime $s.Created}}
             </td>
             <td>
-                <div class="badge bg-info">{{$s.State}}</div>
+                {{block "server_state" $s}}{{end}}
             </td>
         </tr>
         {{end}}
