--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -1,5 +1,10 @@
 {{define "title"}}Node details ({{.UserNode.Name}}){{end}}
 {{define "title-icon"}}<i class="fa fa-server"></i>{{end}}
+{{define "header_custom"}}
+    {{if .IsProvisioning}}
+    <meta http-equiv="refresh" content="2"/>
+    {{end}}
+{{end}}
 {{define "top-content"}}
     {{block "breadcrumb" .Breadcrumb}}{{end}}
 {{end}}
@@ -45,6 +50,13 @@
             </td>
         </tr>
         <tr>
+            <td>State</td>
+            <td>
+                {{block "node_state" .UserNode}}{{end}}
+            </td>
+        </tr>
+        {{if not .IsProvisioning}}
+        <tr>
             <td>Actions</td>
             <td>
                 {{if .CanDelete}}
@@ -58,12 +70,6 @@
                     </div>
                 </form>
                 {{end}}
-            </td>
-        </tr>
-        <tr>
-            <td>State</td>
-            <td>
-                {{block "node_state" .UserNode}}{{end}}
             </td>
         </tr>
         <tr>
@@ -101,11 +107,12 @@
                 </div>
             </td>
         </tr>
+        {{end}}
     </table>
 </div>
 <hr>
-<h4>Servers</h4>
 {{if .Servers}}
+<h4>Servers</h4>
 <table class="table">
     <thead>
         <th>Name</th>
@@ -132,6 +139,8 @@
     </tbody>
 </table>
 {{end}}
+{{if not .IsProvisioning}}
+
 {{if not .Servers}}
 <div class="alert alert-info">
     <i class="fa fa-info"></i>
@@ -142,6 +151,8 @@
     <i class="fa fa-plus"></i>
     Create server
 </a>
+
+{{end}}
 <hr>
 <h4>Payments</h4>
 <table class="table">
