--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,7 @@
 		<!-- app root -->
 		<app id="app"></app>
 
-		<!-- libraries -->
-		<script src="node_modules/vue/dist/vue.global.prod.js"></script>
-		<script src="node_modules/vue-router/dist/vue-router.global.prod.js"></script>
-
 		<!-- app bootstrap -->
-		<script src="js/bundle.js" onerror="import('./js/main.js')"></script>
+		<script src="js/bootstrap.js"></script>
 	</body>
 </html>
