--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<!-- styles -->
 		<link rel="stylesheet" href="node_modules/bootswatch/dist/flatly/bootstrap.min.css"/>
 		<link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
+		<link rel="stylesheet" href="node_modules/@vuepic/vue-datepicker/dist/main.css"/>
 
 		<title>Minetest hosting</title>
 	</head>
