--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="theme-color" content="#000">
+		<meta name="og:title" content="Minetest hosting"/>
+		<meta name="og:site_name" content="Minetest hosting"/>
+		<meta name="og:image" content="https://raw.githubusercontent.com/minetest-hosting/.github/main/assets/minetest-hosting-100px.png"/>
 		<link rel="icon" href="assets/minetest-hosting-80px.png" type="image/png">
 
 		<!-- styles -->
