--- a/worker/server_setup/index.html
+++ b/worker/server_setup/index.html
@@ -1,3 +1,6 @@
 <html>
     <a href="ui/">Management UI</a>
+    <a href="map/">Mapserver</a>
+    <a href="web/">Minetest Web-Client</a>
+    <a href="nodered/">NodeRED</a>
 </html>
