--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="theme-color" content="#000">
-		<meta name="og:title" content="Minetest hosting"/>
-		<meta name="og:site_name" content="Minetest hosting"/>
-		<meta name="og:image" content="https://raw.githubusercontent.com/minetest-hosting/.github/main/assets/minetest-hosting-100px.png"/>
-		<link rel="icon" href="assets/minetest-hosting-80px.png" type="image/png">
+		<meta name="og:title" content="Luanti hosting"/>
+		<meta name="og:site_name" content="Luanti hosting"/>
+		<meta name="og:image" content="https://raw.githubusercontent.com/luanti-hosting/.github/main/assets/luanti-hosting-100px.png"/>
+		<link rel="icon" href="assets/luanti-hosting-80px.png" type="image/png">
 
 		<!-- styles -->
 		<link rel="stylesheet" href="node_modules/bootswatch/dist/flatly/bootstrap.min.css"/>
 		<link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
 		<link rel="stylesheet" href="node_modules/@vuepic/vue-datepicker/dist/main.css"/>
 
-		<title>Minetest hosting</title>
+		<title>Luanti hosting</title>
 	</head>
 	<body>
 		<!-- app root -->
