--- a/worker/server_setup/index.html
+++ b/worker/server_setup/index.html
@@ -1,6 +1,5 @@
 <html>
     <a href="ui/">Management UI</a>
     <a href="map/">Mapserver</a>
-    <a href="mtweb/">Minetest Web-Client</a>
-    <a href="nodered/">NodeRED</a>
+    <a href="mtweb/">Luanti Web-Client</a>
 </html>
